[package]
name = "epics-sys"
version = "0.0.2"
authors = ["Niklas Claesson <nicke.claesson@gmail.com>"]
description = "Simplify rust usage in EPICS"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version="0.15", features=["full", "extra-traits"]}
# syn = "0.15"
quote = "0.6"
paste = "0.1"
proc-macro2 = "0.4"
